sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:60: error: not found: value getCouleur
  if (getCouleur(b+1,0)==col || getCouleurJoueur(b+1,1)==col){
      ^